# glint

./: .gitignore  .gitmodules  API_REFERENCE.md  APPLICATION_FRAMEWORK.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README-RPI.md  README.md  build-rpi.sh  build.sh  glint.pc.in  install-rpi.sh  install.sh  toolchain-aarch64.cmake
.devcontainer/: devcontainer.json
.github/docker/: rpi4-toolchain.Dockerfile
.github/workflows/: build-library.yml  build-toolchain-image.yml  examples.yml
examples/graphics/cube/: .titleconfig  CMakeLists.txt  LICENSE  README.md  build.sh
examples/graphics/cube/src/: main.cpp
include/glad/: glad.h
include/glint/: glint.h
include/glint/gl/: gl.h  ui2d.h
include/glint/hid/: hid.h
include/glint/io/: fs.h  io.h
include/glint/math/: math.h
include/glint/sys/: exec.h  title.h
include/glint/types/: graphics.h  math.h
src/: cube.h  dbg_fontload.h  exec.cpp  exec_internal.h  fs.cpp  gl.cpp  glad.c  hid.cpp  internal.h  io.cpp  math.cpp  title.cpp  ui2d.cpp
system/apps/homescreen/: .titleconfig  CMakeLists.txt
system/apps/homescreen/src/: homescreen.cpp  homescreen.h  main.cpp
system/bootloader/: CMakeLists.txt
system/bootloader/include/: setup.h
system/bootloader/src/: boot.cpp  setup.cpp
tools/glt_execcreate/: CMakeLists.txt
tools/glt_execcreate/src/: includes.h  main.cpp
